updated scrollbars on select and textarea + SelectInput placeholder fix when no options available

--- a/resources/css/dropdown.css
+++ b/resources/css/dropdown.css
@@ -40,9 +40,51 @@
 	margin: -1rem -1.125rem;
 	overflow: auto;
 	list-style: none;
+	position: relative;
 	overscroll-behavior: contain;
 	scrollbar-width: thin;
-	scrollbar-color: color-mix(in srgb, var(--link-color) 24%, var(--card-background)) color-mix(in srgb, transparent 20%, var(--body-background));
+	scrollbar-color: color-mix(in srgb, var(--heading-color) var(--light, 25%) var(--dark, 35%), var(--input-background)) transparent;
+}
+@supports (animation-timeline: scroll()) {
+	@keyframes scrollReveal {
+		0% { opacity: 0; }
+		100% { opacity: 1; }
+	}
+	@keyframes detectScroll {
+		from, to { --can-scroll: ; }
+	}
+	.dropdown-select-list {
+		scroll-timeline: --scroll-timeline y;
+		animation: detectScroll;
+		animation-timeline: --scroll-timeline;
+		animation-fill-mode: none;
+	}
+	.dropdown-select-list::before, .dropdown-select-list::after {
+		content: '';
+		height: 1rem;
+		display: block;
+		z-index: -1;
+		position: sticky;
+		animation-name: scrollReveal;
+		animation-timeline: --scroll-timeline;
+		animation-fill-mode: both;
+		--visibility-if-can-scroll: var(--can-scroll) visible;
+		--visibility-if-cant-scroll: hidden;
+		visibility: var(--visibility-if-can-scroll, var(--visibility-if-cant-scroll));
+	}
+	.dropdown-select-list::before {
+		margin: -1rem -.625rem 0;
+		top: -1rem;
+		background-image: radial-gradient(at top, color-mix(in srgb, var(--border) 60%, transparent), transparent 70%);
+		animation-range: 1em 2em;
+	}
+	.dropdown-select-list::after {
+		margin: 0 -.625rem -1rem;
+		bottom: -1rem;
+		background-image: radial-gradient(at bottom, color-mix(in srgb, var(--border) 60%, transparent), transparent 70%);
+		animation-direction: reverse;
+		animation-range: calc(100% - 2em) calc(100% - 1em);
+	}
 }
 
 .dropdown-menu {
